--- a/index.html
+++ b/index.html
@@ -4,24 +4,68 @@
     <meta charset="UTF-8">
     <title>Fork Me! FCC: Test Suite Template</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://kit.fontawesome.com/1f3a87fae0.js" crossorigin="anonymous"></script>
   </head>
 
   <body>
-    <p>'Hello world,we are software developers'</p>
+    <header id="header">
+        <div class="logo">
+          <img id="header-img" alt="logo" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/product-landing-page-logo.png"/>
+        </div>
+
+        <nav id="nav-bar">
+          <ul>
+            <li><a  class="nav-link" href="#features">Features</a></li>
+            <li><a  class="nav-link" href="#howItWorks">How It Works</a></li>
+            <li><a  class="nav-link" href="#pricing">Pricing</a></li>
+          </ul>
+        </nav>
+    </header>
+    <section id="hero">
+      <h2>Handcrafted, home-made masterpieces</h2>
+      <form id="form" action="https://www.freecodecamp.com/email-submit">
+        <input type="email" id="email" placeholder="Enter your email address" required/>
+        <input type="submit" id="submit" value="GET STARTED"/>
+      </form>
+    </section>
+
+    <div class="container">
+      <div class="features">
+
+        <div class="grid">
+          <div class="icon">
+            <i class="fa-solid fa-fire-flame-curved"></i>
+          </div>
+          <div class="text">
+            <h2>Premium Materials</h2>
+            <p>Our trombones use the shiniest brass which is sourced locally. This will increase the longevity of your purchase.</p>
+          </div>
+        </div>
+
+        <div class="grid">
+          <div class="icon">
+            <i class="fa-solid fa-truck"></i>
+          </div>
+          <div class="text">
+            <h2>Fast Shipping</h2>
+            <p>We make sure you recieve your trombone as soon as we have finished making it. We also provide free returns if you are not satisfied.</p>
+          </div>
+        </div>
+
+        <div class="grid">
+          <div class="icon">
+              <i class="fa-solid fa-battery-full"></i>
+          </div>
+          <div class="text">
+              <h2>Quality Assurance</h2>
+              <p>For every purchase you make, we will ensure there are no damages or faults and we will check and test the pitch of your instrument.</p>
+          </div>
+        </div>
+
+      </div>
+    </div>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-
-    <!--
-
-    Hello Camper!
-
-    For now, the test suite only works in Chrome!
-    Please read the README below in the JS Editor before beginning.
-    Feel free to delete this message once you have read it.
-    Good luck and Happy Coding!
-
-    - The freeCodeCamp Team
-
-    -->
     <script  src="js/index.js"></script>
+    
   </body>
 </html>
