--- a/index.html
+++ b/index.html
@@ -63,6 +63,51 @@
         </div>
 
       </div>
+      <iframe id="video"  src="https://youtu.be/y8Yv4pnO7qc" height="315px" width="300px" title="product video" frame-border="0"></iframe>
+    </section>
+      <section id="billing"> 
+      <div class="product" id="tenor">
+        <div class="level"> TENOR TROMBONE</div>
+        <h2>$600</h2>
+        <ol>
+          <li>Lorem ipsum.</li>
+          <li>Lorem ipsum.</li>
+          <li>Lorem ipsum dolor.</li>
+          <li>Lorem ipsum.</li>
+        </ol>
+        <button class="btn">Select</button>
+        </div>
+        <div class="product" id="bass">
+          <div class="level"> BASS TROMBONE</div>
+          <h2>$900</h2>
+          <ol>
+            <li>Lorem ipsum.</li>
+            <li>Lorem ipsum.</li>
+            <li>Lorem ipsum dolor.</li>
+            <li>Lorem ipsum.</li>
+          </ol>
+          <button class="btn">Select</button>
+      </div>
+      <div class="product" id="valve">
+        <div class="level"> VALVE TROMBONE</div>
+        <h2>$1200</h2>
+        <ol>
+          <li>Lorem ipsum.</li>
+          <li>Lorem ipsum.</li>
+          <li>Lorem ipsum dolor.</li>
+          <li>Lorem ipsum.</li>
+        </ol>
+        <button class="btn">Select</button>
+      </section>
+      <footer>
+        <ul class="final">
+          <li>Privacy</li>
+          <li>Terms</li>
+          <li>Contact</li>
+        </ul>
+        <span>Copyright 2016, Original Trombones</span>
+      </footer>
+        </div>
     </div>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <script  src="js/index.js"></script>
