--- a/index.html
+++ b/index.html
@@ -9,106 +9,108 @@
 
   <body>
     <header id="header">
-        <div class="logo">
+      <div class="logo">
           <img id="header-img" alt="logo" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/product-landing-page-logo.png"/>
-        </div>
-
-        <nav id="nav-bar">
-          <ul>
-            <li><a  class="nav-link" href="#features">Features</a></li>
-            <li><a  class="nav-link" href="#howItWorks">How It Works</a></li>
-            <li><a  class="nav-link" href="#pricing">Pricing</a></li>
+      </div>
+      <nav id="nav-bar">
+          ><ul>
+              <li ><a class="nav-link" href="#features">Features</a></li>
+              <li ><a class="nav-link" href="#HowItWorks">How It Works</a></li>
+              <li ><a class="nav-link" href="#pricing">Pricing</a></li>
           </ul>
-        </nav>
-    </header>
+      </nav>
+  </header>
+
     <section id="hero">
-      <h2>Handcrafted, home-made masterpieces</h2>
-      <form id="form" action="https://www.freecodecamp.com/email-submit">
-        <input type="email" id="email" placeholder="Enter your email address" required/>
-        <input type="submit" id="submit" value="GET STARTED"/>
-      </form>
-    </section>
+            <h2>Handcrafted, home-made masterpieces</h2>
+            <form id="form" action="https://www.freecodecamp.com/email-submit">
+            <input type="email" id="email" placeholder="Enter your email address" name="email"
+            required/>
+            <input type="submit" id="submit" value="GET STARTED"/>
+        </form>
+        </section>
 
-    <div class="container">
-      <div class="features">
+        <div class="container">
+          <div id="features">
 
-        <div class="grid">
-          <div class="icon">
-            <i class="fa-solid fa-fire-flame-curved"></i>
-          </div>
-          <div class="text">
-            <h2>Premium Materials</h2>
-            <p>Our trombones use the shiniest brass which is sourced locally. This will increase the longevity of your purchase.</p>
-          </div>
-        </div>
+              <div class="grid">
+                  <div class="icon">
+                      <i class="fa-solid fa-fire-flame-curved"></i>
+                  </div>
+                  <div class="text">
+                      <h2>Premium Materials</h2>
+                      <p>Our trombones use the shiniest brass which is sourced locally. This will increase the longevity of your purchase.</p>
+                  </div>
+              </div>
 
-        <div class="grid">
-          <div class="icon">
-            <i class="fa-solid fa-truck"></i>
-          </div>
-          <div class="text">
-            <h2>Fast Shipping</h2>
-            <p>We make sure you recieve your trombone as soon as we have finished making it. We also provide free returns if you are not satisfied.</p>
-          </div>
-        </div>
+              <div class="grid">
+                  <div class="icon">
+                      <i class="fa-solid fa-truck"></i>
+                  </div>
+                  <div class="text">
+                      <h2>Fast Shipping</h2>
+                      <p>We make sure you recieve your trombone as soon as we have finished making it. We also provide free returns if you are not satisfied.</p>
+                  </div>
+              </div>
 
-        <div class="grid">
-          <div class="icon">
-              <i class="fa-solid fa-battery-full"></i>
+              <div class="grid">
+                  <div class="icon">
+                      <i class="fa-solid fa-battery-full"></i>
+                  </div>
+                  <div class="text">
+                      <h2>Quality Assurance</h2>
+                      <p>For every purchase you make, we will ensure there are no damages or faults and we will check and test the pitch of your instrument.</p>
+                  </div>
+              </div>
           </div>
-          <div class="text">
-              <h2>Quality Assurance</h2>
-              <p>For every purchase you make, we will ensure there are no damages or faults and we will check and test the pitch of your instrument.</p>
+
+          
+          <div id="HowItWorks">
+              <iframe id="video" src="https://youtu.be/y8Yv4pnO7qc" height="315" 
+              width="500"  title="Product Video" frameborder="0"></iframe>
           </div>
-        </div>
+
+              <div id="pricing">
+
+                  <div  class="product">
+                      <div class="level">TENOR TROMBONE</div>
+                      <h2>$600</h2>
+                      <ol>
+                          <li>Lorem ipsum.</li>
+                          <li>Lorem ipsum.</li>
+                          <li>Lorem ipsum dolor.</li>
+                          <li>Lorem ipsum.</li>
+                      </ol>
+                      <button class="btn">SELECT</button>
+                  </div>
+
+                  <div  class="product">
+                      <div class="level">BASS TROMBONE</div>
+                      <h2>$900</h2>
+                      <ol>
+                          <li>Lorem ipsum.</li>
+                          <li>Lorem ipsum.</li>
+                          <li>Lorem ipsum dolor.</li>
+                          <li>Lorem ipsum.</li>
+                      </ol>
+                      <button class="btn">SELECT</button>
+                  </div>
+
+                  <div  class="product">
+                      <div class="level">VALVE TROMBONE</div>
+                      <h2>$1200</h2>
+                      <ol>
+                          <li>Plays similar to a Trumpet</li>
+                          <li>Great for Jazz Bands</li>
+                          <li>Lorem ipsum dolor.</li>
+                          <li>Lorem ipsum.</li>
+                      </ol>
+                      <button class="btn">SELECT</button>
+                  </div>
+
+              </div>
 
       </div>
-      <iframe id="video"  src="https://youtu.be/y8Yv4pnO7qc" height="315px" width="300px" title="product video" frame-border="0"></iframe>
-    </section>
-      <section id="billing"> 
-      <div class="product" id="tenor">
-        <div class="level"> TENOR TROMBONE</div>
-        <h2>$600</h2>
-        <ol>
-          <li>Lorem ipsum.</li>
-          <li>Lorem ipsum.</li>
-          <li>Lorem ipsum dolor.</li>
-          <li>Lorem ipsum.</li>
-        </ol>
-        <button class="btn">Select</button>
-        </div>
-        <div class="product" id="bass">
-          <div class="level"> BASS TROMBONE</div>
-          <h2>$900</h2>
-          <ol>
-            <li>Lorem ipsum.</li>
-            <li>Lorem ipsum.</li>
-            <li>Lorem ipsum dolor.</li>
-            <li>Lorem ipsum.</li>
-          </ol>
-          <button class="btn">Select</button>
-      </div>
-      <div class="product" id="valve">
-        <div class="level"> VALVE TROMBONE</div>
-        <h2>$1200</h2>
-        <ol>
-          <li>Lorem ipsum.</li>
-          <li>Lorem ipsum.</li>
-          <li>Lorem ipsum dolor.</li>
-          <li>Lorem ipsum.</li>
-        </ol>
-        <button class="btn">Select</button>
-      </section>
-      <footer>
-        <ul class="final">
-          <li>Privacy</li>
-          <li>Terms</li>
-          <li>Contact</li>
-        </ul>
-        <span>Copyright 2016, Original Trombones</span>
-      </footer>
-        </div>
-    </div>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <script  src="js/index.js"></script>
     
